feat: execute non-stream chat completions
